[package]
name = "lingua-cli"
description = "Lingua-cli is a command line tool for language classification, using the lingua-rs library."
authors = ["Maarten van Gompel <proycon@anaproy.nl>"]
license = "GPL-3.0-only"
readme = "README.md"
repository = "https://github.com/proycon/lingua-cli"
version = "0.2.1"
edition = "2021"

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
lingua = "*"
